WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304419
[OpenXR] Hit test is always enabled at runtime even if extensions are not available
https://bugs.webkit.org/show_bug.cgi?id=304419
Summary
[OpenXR] Hit test is always enabled at runtime even if extensions are not ava...
Sergio Villar Senin
Reported
2025-12-18 10:09:21 PST
We should check the availability of the required extensions before advertising hit testing feature as available
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2025-12-18 10:14:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55636
EWS
Comment 2
2025-12-19 02:23:15 PST
Committed
304739@main
(233d6e4a102d): <
https://commits.webkit.org/304739@main
> Reviewed commits have been landed. Closing PR #55636 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-19 02:24:14 PST
<
rdar://problem/166864720
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug