[OpenXR] Hit test is always enabled at runtime even if extensions are not available https://bugs.webkit.org/show_bug.cgi?id=304419

Reviewed by Dan Glastonbury and Fujii Hironori.

We should not unconditionally advertise hit testing as supported if the
required OpenXR extensions are not available. Even if hit testing is
enabled at build time that does not mean that the extension is supported
by the OpenXR runtime.

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::getPrimaryDeviceInfo):

Canonical link: https://commits.webkit.org/304739@main